prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_bracket.nut
// EXPECT_ERROR: "expected ']'"
let a = [1, 2, 3]; let x = a[0
